--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <title>catalogue</title>
 <body>
-  <a href="唐瑞阳_简历及作品_15901028251.pdf">唐瑞阳_简历及作品_15901028251</a>
+  <a href="try_resume_15901028251.pdf">唐瑞阳_简历及作品_15901028251</a>
 </body>
 </html>
